--- a/localBackend/package.json
+++ b/localBackend/package.json
@@ -16,6 +16,7 @@
     "fs": "^0.0.1-security",
     "ftp": "^0.3.10",
     "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
     "sequelize": "^6.37.2"
   }
 }
